// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton deve adicionar um hint custom automaticamente 1`] = `
.emotion-2 {
  background-color: transparent;
  border: none;
  border-radius: 4px;
  color: #666666;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-2 span {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2:disabled {
  opacity: 0.5;
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #056DFF;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

<span
  class="hint-wrapper"
>
  <button
    class="emotion-2"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="Editar"
          >
            <path
              d="M4 17.18L4.01 20h2.83L18.01 8.83 15.18 6 4 17.18zM19.72 5.61l-1.33-1.33a.94.94 0 0 0-1.33 0L16 5.33 18.67 8l1-1.06a.94.94 0 0 0 .05-1.33z"
            />
          </g>
        </svg>
      </span>
    </span>
  </button>
</span>
`;

exports[`IconButton deve adicionar um hint string automaticamente 1`] = `
.emotion-2 {
  background-color: transparent;
  border: none;
  border-radius: 4px;
  color: #666666;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-2 span {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2:disabled {
  opacity: 0.5;
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #056DFF;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

<span
  class="hint-wrapper"
>
  <button
    class="emotion-2"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="Editar"
          >
            <path
              d="M4 17.18L4.01 20h2.83L18.01 8.83 15.18 6 4 17.18zM19.72 5.61l-1.33-1.33a.94.94 0 0 0-1.33 0L16 5.33 18.67 8l1-1.06a.94.94 0 0 0 .05-1.33z"
            />
          </g>
        </svg>
      </span>
    </span>
  </button>
</span>
`;

exports[`IconButton deve renderizar corretamente 1`] = `
.emotion-2 {
  background-color: transparent;
  border: none;
  border-radius: 4px;
  color: #666666;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-2 span {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2:disabled {
  opacity: 0.5;
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #056DFF;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

<button
  class="emotion-2"
  type="button"
>
  <span>
    <span
      class="emotion-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="Editar"
        >
          <path
            d="M4 17.18L4.01 20h2.83L18.01 8.83 15.18 6 4 17.18zM19.72 5.61l-1.33-1.33a.94.94 0 0 0-1.33 0L16 5.33 18.67 8l1-1.06a.94.94 0 0 0 .05-1.33z"
          />
        </g>
      </svg>
    </span>
  </span>
</button>
`;

exports[`IconButton deve ter animação de loading 1`] = `
.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-2 {
  background-color: transparent;
  border: none;
  border-radius: 4px;
  color: #666666;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  pointer-events: none;
}

.emotion-2 span {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2:disabled {
  opacity: 0.5;
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #056DFF;
}

.emotion-2 span {
  visibility: hidden;
}

.emotion-2:after {
  -webkit-animation: animation-1scjtrl 500ms infinite linear;
  animation: animation-1scjtrl 500ms infinite linear;
  border: 3px solid currentColor;
  border-radius: 50%;
  border-right-color: transparent;
  border-top-color: transparent;
  content: "";
  display: block;
  font-size: 0.875rem;
  height: 1.5em;
  width: 1.5em;
  position: absolute;
  left: calc(50% - (1.5em / 2));
  top: calc(50% - (1.5em / 2));
}

<button
  class="emotion-2"
  type="button"
>
  <span>
    <span
      class="emotion-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="Editar"
        >
          <path
            d="M4 17.18L4.01 20h2.83L18.01 8.83 15.18 6 4 17.18zM19.72 5.61l-1.33-1.33a.94.94 0 0 0-1.33 0L16 5.33 18.67 8l1-1.06a.94.94 0 0 0 .05-1.33z"
          />
        </g>
      </svg>
    </span>
  </span>
</button>
`;
